# Tank-Battles

./: Base.cpp  Base.h  CMakeLists.txt  DesWall.cpp  DesWall.h  Destroyable.cpp  Destroyable.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Object.cpp  Object.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  README.md  State.cpp  State.h  Undestroyable.cpp  Undestroyable.h  main.cpp  main_test.cpp
Potentiell implementation/: MenuState.cpp  MenuState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  run.cpp  run.h
